tests/snapshots/alphabetize/module_assigns_single_tier.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/alphabetize/module_assigns_single_tier.input.py
---
alphabetize@238..286
