tests/snapshots/alphabetize/module_assigns_single_tier.input.py.snap
---
source: tests/integration.rs
expression: output
input_file: tests/fixtures/alphabetize/module_assigns_single_tier.input.py
---
"""
A module-level run of single-name `Assign` statements with no
intra-run references alphabetizes within tier 0. Every binding's
RHS is a literal, so the dependency graph is empty and every name
sorts directly against every other.
"""

alpha = "first"
bravo = "second"
charlie = "third"
