tests/snapshots/alphabetize/module_assigns_subscript_opaque_skip.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/alphabetize/module_assigns_subscript_opaque_skip.input.py
---

