tests/snapshots/alphabetize/module_assigns_trailing_comment_skip.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/alphabetize/module_assigns_trailing_comment_skip.input.py
---

