tests/snapshots/alphabetize/multi_target.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/alphabetize/multi_target.input.py
---
alphabetize@243..558
