tests/snapshots/alphabetize/multi_target.input.py.snap
---
source: tests/integration.rs
expression: "&output"
input_file: tests/fixtures/alphabetize/multi_target.input.py
---
"""
Several alphabetize targets fire in one source: classes at module
level, methods within a class, kwargs at a call site, and a
`from`-import run. The rule iterates internally to settle nested
concerns inside an enclosing reorder.
"""

from collections import Counter
from loguru import logger


class Alpha:
    def __init__(self):
        pass

    def __repr__(self):
        pass

    def public(self):
        pass


class Beta:
    pass


class Gamma:
    def public(self):
        return Counter(
            first=1,
            second=2,
        )
