tests/snapshots/alphabetize/namedtuple.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/alphabetize/namedtuple.input.py
---
alphabetize@308..365
